--- a/ppc-server/package.json
+++ b/ppc-server/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
