--- a/ppc-server/package.json
+++ b/ppc-server/package.json
@@ -13,9 +13,11 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -34,6 +36,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.5",
-    "ts-node": "^8.9.0"
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3"
   }
 }
