--- a/ppc-server/package.json
+++ b/ppc-server/package.json
@@ -17,7 +17,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "typeorm": "^0.2.24"
+    "sequelize": "^5.21.7",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -28,6 +29,7 @@
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/sequelize": "^4.28.8",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
