--- a/ppc-server/package.json
+++ b/ppc-server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.3.9",
